@@ -1,5 +1,7 @@
 package ru.loolzaaa.authserver.config.security.bean;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -11,19 +13,16 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.core.Authentication;
 import ru.loolzaaa.authserver.services.JWTService;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.util.Base64;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static org.assertj.core.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class JwtAuthenticationSuccessHandlerTest {
 
-    final String TOKEN = "TOKEN";
+    final String token = "TOKEN";
 
     @Mock
     HttpServletRequest req;
@@ -41,8 +40,8 @@ class JwtAuthenticationSuccessHandlerTest {
     void setUp() {
         successHandler = new JwtAuthenticationSuccessHandler(jwtService);
 
-        when(jwtService.authenticateWithJWT(eq(req), eq(resp), eq(authentication), anyString())).thenReturn(TOKEN);
-        lenient().when(jwtService.authenticateWithJWT(eq(req), eq(authentication), anyString())).thenReturn(TOKEN);
+        when(jwtService.authenticateWithJWT(eq(req), eq(resp), eq(authentication), anyString())).thenReturn(token);
+        lenient().when(jwtService.authenticateWithJWT(eq(req), eq(authentication), anyString())).thenReturn(token);
     }
 
     @ParameterizedTest
@@ -115,7 +114,7 @@ class JwtAuthenticationSuccessHandlerTest {
         );
         return decoded.stream()
                 .map(s -> new String(Base64.getUrlEncoder().encode(s.getBytes())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     static List<String> getValidUrls() {
@@ -125,6 +124,6 @@ class JwtAuthenticationSuccessHandlerTest {
         );
         return decoded.stream()
                 .map(s -> new String(Base64.getUrlEncoder().encode(s.getBytes())))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
